--- a/rasa/data/nlu.yml
+++ b/rasa/data/nlu.yml
@@ -15,7 +15,8 @@ nlu:
       - good morning
       - good evening
       - hey there
-
+      - hola
+      - que tal
   - intent: goodbye
     examples: |
       - bye
