--- a/rasa/domain.yml
+++ b/rasa/domain.yml
@@ -8,11 +8,11 @@ intents:
   - deny
   - bot_challenge
   - ask_pasillo
-
+  - tell_account_number
 entities:
   - choice
   - producto
-
+  - account_number
 slots:
   choice:
     type: text
@@ -25,6 +25,11 @@ slots:
     mappings:
       - type: from_entity
         entity: producto
+  account_number:
+    type: float
+    mappings:
+      - type: from_entity
+        entity: account_number
 
 responses:
   utter_play:
@@ -48,7 +53,7 @@ responses:
 actions:
   - action_play_rps
   - action_response_product
-
+  - action_account_number
 session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
