--- a/rasa/domain.yml
+++ b/rasa/domain.yml
@@ -7,7 +7,7 @@ intents:
   - affirm
   - deny
   - bot_challenge
-  - ask_pasillo
+  - solicitar_producto
   - tell_account_number
 entities:
   - choice
@@ -69,6 +69,7 @@ actions:
   - action_play_rps
   - action_response_product
   - action_account_number
+  - action_responder_producto
 session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
