--- a/rasa/data/stories.yml
+++ b/rasa/data/stories.yml
@@ -21,10 +21,8 @@ stories:
     steps:
       - intent: greet
       - action: utter_bienvenida
-      - intent: ask_pasillo
-        entities:
-          - name_product: "Beterraga"
-      - action: action_response_product
+      - intent: solicitar_producto
+      - action: action_responder_producto
       - action: utter_nueva_pregunta
   - story: preguntar nuevamente
     steps:
@@ -39,4 +37,4 @@ stories:
   - story: tell account number
     steps:
       - intent: tell_account_number
-      - action: action_account_number
+      - action: action_responder_producto
