--- a/rasa/knowledge_base_data.json
+++ b/rasa/knowledge_base_data.json
@@ -377,7 +377,7 @@
           },
           {
             "id": 9,
-            "name": "Jugo vivo pera manzan"
+            "name": "Jugo vivo pera manzana"
           },
           {
             "id": 10,
@@ -460,7 +460,7 @@
           },
           {
             "id": 15,
-            "name": "poroto verde corte frances"
+            "name": "poroto verde corte francés"
           },
           {
             "id": 16,
@@ -543,7 +543,7 @@
           },
           {
             "id": 11,
-            "name": "arnes"
+            "name": "arnés"
           }
         ],
         "pasillo": 1
